--- a/assignment6/barmap.html
+++ b/assignment6/barmap.html
@@ -3,22 +3,24 @@
     <head>
         <title>DrinkUp</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="assignment6/favicon/drink_blue.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="assignment6/css/general.css">
+        <link rel="shortcut icon" href="favicon/drink_blue.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="css/general.css">
         <style type="text/css">
-        a#try{
-                text-decoration: none;
+            img#map{
                 position: absolute;
-                margin-top: 320px;
-                margin-left: 10px;
-        }
+                margin-left: 290px;
+                margin-top: 70px;
+            }
+
         </style>
+
     </head>
+
 
     <body>
     <header class="head">
 
-        <img src="assignment6/logo/drink_logo.png">
+        <img src="logo/drink_logo.png">
         <article>
             <form action="posted" method="post">
                 <h1 id="sign">Sign in:</h1>
@@ -39,13 +41,13 @@
                 <nav>
                   <div id="divNav">
                         <ul>
-                            <li><a href="assignment6/bars.html" id="Bars">Bars </a> </li>
-                            <li><a href="assignment6/menu.html" id="Menu">Menu</a></li>
-                            <li><a href="assignment6/order.html" id="OrderOnline">Order Online</a></li>
-                            <li><a href="assignment6/contact_us.html" id="ContactUs">Contact us</a></li>
-                            <li><a href="assignment6/advertisement.html" id="Advertisement">Advertisement</a></li>
-                            <li><a href="assignment6/barmap.html" id="Map">Map</a></li>
-                            <li><a href="assignment6/search.html" id="Search">Search</a></li>
+                            <li><a href="bars.html" id="Bars">Bars </a> </li>
+                            <li><a href="menu.html" id="Menu">Menu</a></li>
+                            <li><a href="order.html" id="OrderOnline">Order Online</a></li>
+                            <li><a href="contact_us.html" id="ContactUs">Contact us</a></li>
+                            <li><a href="advertisement.html" id="Advertisement">Advertisement</a></li>
+                            <li><a href="barmap.html" id="Map">Map</a></li>
+                            <li><a href="search.html" id="Search">Search</a></li>
                         </ul>
                   </div>
                 </nav>
@@ -53,12 +55,15 @@
            <div id="contentDiv">
     <div id="mainDiv">
 
-            <hgroup>
-                <h1>Welcome, order your drinks</h1>
-                <h2>You can easily order online</h2>
-            </hgroup>
-            <p>We encourage our customers to use this app rather than waiters</p>
-            <a id="try" href="assignments.html"><h1>Assignments</h1></a>
+            <img src="map.gif" id="map"  alt="" width="260" height="501" usemap="#Map"/>
+<map name="Map">
+  <area shape="circle" coords="109,349,36" href="http://www.yelp.com/search?find_desc=Bars+Meat+Packing+District&find_loc=New+York%2C+NY" alt="meatpacking">
+  <area shape="circle" coords="189,370,40" href="http://www.yelp.com/search?cflt=bars&find_loc=Lower+East+Side%2C+Manhattan%2C+NY" alt="lowereast">
+  
+  <area shape="circle" coords="147,420,34" href="http://www.yelp.com/search?find_desc=Soho+Bars&find_loc=New+York%2C+NY" alt="soho">
+  
+<area shape="rect" coords="66,208,187,321" href="http://www.yelp.com/search?find_desc=Best+Bars+Midtown&find_loc=New+York%2C+NY" alt="midtown">
+</map>
 
 
     </div>
