--- a/assignment6/search.html
+++ b/assignment6/search.html
@@ -3,22 +3,26 @@
     <head>
         <title>DrinkUp</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="assignment6/favicon/drink_blue.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="assignment6/css/general.css">
+        <link rel="shortcut icon" href="favicon/drink_blue.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="css/general.css">
         <style type="text/css">
-        a#try{
+            table{
                 text-decoration: none;
-                position: absolute;
-                margin-top: 320px;
-                margin-left: 10px;
-        }
+                color: orange;
+                font-size: 20px;
+                border: 1px,solid;
+                list-style-type: none;
+            }
+             tr a{
+                text-decoration: none;
+            }
         </style>
     </head>
 
     <body>
     <header class="head">
 
-        <img src="assignment6/logo/drink_logo.png">
+        <img src="logo/drink_logo.png">
         <article>
             <form action="posted" method="post">
                 <h1 id="sign">Sign in:</h1>
@@ -39,13 +43,13 @@
                 <nav>
                   <div id="divNav">
                         <ul>
-                            <li><a href="assignment6/bars.html" id="Bars">Bars </a> </li>
-                            <li><a href="assignment6/menu.html" id="Menu">Menu</a></li>
-                            <li><a href="assignment6/order.html" id="OrderOnline">Order Online</a></li>
-                            <li><a href="assignment6/contact_us.html" id="ContactUs">Contact us</a></li>
-                            <li><a href="assignment6/advertisement.html" id="Advertisement">Advertisement</a></li>
-                            <li><a href="assignment6/barmap.html" id="Map">Map</a></li>
-                            <li><a href="assignment6/search.html" id="Search">Search</a></li>
+                            <li><a href="bars.html" id="Bars">Bars </a> </li>
+                            <li><a href="menu.html" id="Menu">Menu</a></li>
+                            <li><a href="order.html" id="OrderOnline">Order Online</a></li>
+                            <li><a href="contact_us.html" id="ContactUs">Contact us</a></li>
+                            <li><a href="advertisement.html" id="Advertisement">Advertisement</a></li>
+                            <li><a href="barmap.html" id="Map">Map</a></li>
+                            <li><a href="search.html" id="Search">Search</a></li>
                         </ul>
                   </div>
                 </nav>
@@ -53,12 +57,17 @@
            <div id="contentDiv">
     <div id="mainDiv">
 
-            <hgroup>
-                <h1>Welcome, order your drinks</h1>
-                <h2>You can easily order online</h2>
-            </hgroup>
-            <p>We encourage our customers to use this app rather than waiters</p>
-            <a id="try" href="assignments.html"><h1>Assignments</h1></a>
+            <table>
+                <tr>
+                    <td><a href="bars.html#reina">Reina</a></td>
+                </tr>
+                <tr>
+                    <td><a href="bars.html#lebain">Le bain</a></td>
+                </tr>
+                <tr>
+                    <td><a href="bars.html#boomboom">Boom Boom Room</a></td>
+                </tr>
+            </table>
 
 
     </div>
